# RdKit

./: 1. Molecular Representation & Descriptors.ipynb  2. Datasets, Lipinski & Fingerprints.ipynb  3. Machine Learning with Molecular Fingerprints.ipynb  4. QSAR Classification.ipynb  pyproject.toml
