[project]
name = "RdKit_projects"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "rdkit>=2025.9.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "xgboost>=3.1.2",


]
